<resources>
    <string name="app_name">TechLab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Producten">Producten</string>
    <string name="inloggen">Inloggen</string>
    <string name="gebruikersnaam">Gebruikersnaam</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="email">E-mail</string>
    <string name="geschiedenis">Geshiedenis</string>
    <string name="thema">Thema</string>
    <string name="taal">Taal</string>
    <string name="notificatie">Notificatie</string>
    <string name="geleend_door_s">Geleend door %s</string>
    <string name="log_in_met_je_hr_account">Log in met je HR account</string>
    <string name="inloggen_als_student">Inloggen als student</string>
    <string name="inloggen_als_admin">Inloggen als admin</string>
    <string name="terug">Terug</string>
    <string name="verstuur_melding">Verstuur melding</string>
    <string name="beschrijving">Beschrijving</string>
    <string name="titel">Titel</string>
    <string name="inleverdatum">Inleverdatum:</string>
    <string name="terugnemen">Terugnemen</string>
    <string name="naam">Naam</string>
    <string name="categorie">Categorie</string>
    <string name="hoeveelheid">Hoeveelheid</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="lenen">Lenen</string>
    <string name="product">Product</string>
    <string name="beschikbaarheid">Beschikbaarheid</string>
    <string name="beschikbaar">Beschikbaar</string>
    <string name="admin">Admin</string>
    <string name="beschikbare_producten">Beschikbare producten:</string>
    <string name="uitgeleende_producten">Uitgeleende producten:</string>
    <string name="beschadigde_producten">Beschadigde producten:</string>
    <string name="onbeschadigde_producten">Onbeschadigde producten:</string>
    <string name="_0">0</string>
    <string name="meldingen">Meldingen</string>
    <string name="contact">Contact</string>
    <string name="beheerders">Beheerders</string>
    <string name="statistieken">Statistieken</string>
    <string name="instellingen">Instellingen</string>
    <string name="uitloggen">Uitloggen</string>
    <string name="weet_je_zeker_terug">Weet je zeker dat je het voorwerp terug wilt nemen?</string>
    <string name="beschadigd">Beschadigd</string>
    <string name="annuleren">Annuleren</string>
    <string name="kies_je_thema">Kies je thema</string>
    <string name="basis_thema">Basis thema</string>
    <string name="witte_thema">Witte thema</string>
    <string name="opslaan">Opslaan</string>
    <string name="kies_een_taal">Kies een taal</string>
    <string name="nederlands">Nederlands</string>
    <string name="english">English</string>
    <string name="niet_beshikbaar">Niet beschikbaar</string>
    <string name="product_toevoegen">Product toevoegen</string>
    <string name="alle_velden_invullen">Vul alstublieft alle velden in</string>
    <string name="product_toegevoegd">Product is toegevoegd</string>
    <string name="pruduct_toevoegen_mislukt">Product toevoegen is mislukt, controleer uw verbinding</string>
    <string name="product_teruggebracht">Het voorwerp is teruggebracht.</string>
    <string name="product_verwijderd">Product is verwijderd</string>
    <string name="product_geleend">Het product is geleend</string>
    <string name="product_niet_beschikbaar">Het product is niet beschikbaar</string>
    <string name="wachtwoord_invoeren">Voer een wachtwoord in</string>
    <string name="fout_wachtwoord">Fout wachtwoord</string>
    <string name="login_admin_email">Log in met de admin email</string>
    <string name="login_met_hr">Je moet met jouw HR account inloggen</string>
    <string name="inloggen_mislukt">Inloggen mislukt</string>
    <string name="geen_producten">Geen producten</string>
    <string name="teruggebracht">Teruggebracht</string>
    <string name="contactgegevens">Contactgegevens</string>
    <string name="locatie">Locatie</string>
    <string name="adres">WD.04.022 \nWijnhaven 107 \n3011 WN Rotterdam</string>
    <string name="openingstijden">Openingstijden</string>
    <string name="tijden">"Maandag&#160;&#160;&#160;&#160;&#160;&#160;10.30 &#8211; 17.00 \nDinsdag&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;10.30 &#8211; 15.50 \nWoensdag&#160;&#160;&#160;&#160;10.30 &#8211; 15.50 \nDonderdag&#160;&#160;&#160;10.30 &#8211; 17.00 \nVrijdag&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;gesloten</string>
    <!--  <string name="contact_titel">Voor vragen en/of onduidelijkheden kan je contact opnemen met de volgende personen:</string> !-->
    <string name="uitgelogd">Uitgelogd</string>
    <string name="geschreven_door">Geschreven door: %s</string>
    <string name="uitgegeven_door">Uitgegeven door: %s</string>
    <string name="gemaakt_door">Gemaakt door: %s</string>
    <string name="categorie_list">Categorie: %s</string>
    <string name="geleend_door">Geleend door:</string>
    <string name="geleend_op">Geleend op:</string>
    <string name="ja">Ja</string>
    <string name="nee">Nee</string>
    <string name="leendagen">Leendagen</string>
    <string name="boek">Boek</string>
    <string name="elektronica">Elektronica</string>
    <string name="isbn">ISBN</string>
    <string name="product_id">Product ID</string>
    <string name="beheerder">Beheerder</string>
    <string name="gebruiker">Gebruiker</string>
    <string name="image_uploaden">Foto uploaden</string>
    <string name="thuis">Thuis</string>
    <string name="title_activity_managers">Beheerders</string>
    <string name="verwijderen">Verwijderen</string>
    <string name="geschiedenis_iedereen">Iedereens geschiedenis zien</string>
    <string name="geschiedenis_jij">Alleen je eigen geschiedenis zien</string>
    <string name="handleiding">Handleiding</string>
    <string name="handleidingGebruiker"><b><font size="22">Gebruiker</font></b>\n\n<b>Toegang tot zijpaneel</b>
\nSwipe van links naar rechts of tik op ☰ icon om het zijpaneel te openen. Hier vindt u de belangrijkste Techlabapp functies:
\n
\n1.	Thuis
\n•	Hoofdpagina van de app. Hier bevinden de producten om uitgeleend te worden.
        \n
\n2.	Geschiedenis
\n•	Een overzicht van de tot nu toe uitgeleende producten.
        \n
\n3.	Instellingen
\n•	Hier kunt u de taal en het thema aanpassen.
\n- Taal: selecteer de gewenste taal. Kies uit Nederlands of Engels.
\n- Thema: selecteer uw thema. Kies uit zwart of wit.
\n- Notificatie: selecteer of u notificatie wilt ontvangen.
        \n
\n4.	Contact
\n•	Voor eventuele vragen en/of onduidelijkheden kunt u contact opnemen per mail of kunt u  de locatie bezoeken.
        \n
\n5.	Uitloggen
\n
\n
\n<b>Product uitlenen</b>
\nOp de hoofdpagina van de app is er een lijst met producten die uitgeleend kunnen worden. Kies en tik op een product dat u wilt lenen. Tik vervolgens op "Lenen" om het product uit te lenen.
\n
\n
\n<b>Product terugbrengen</b>
\nBreng het uitgeleende product terug naar het Techlab. Vervolgens geeft de beheerder of admin aan dat het product terug is gebracht.
    </string>
    <string name="handleidingBeheerderAdmin"><b><font size="22">Beheerder/admin</font></b>\n
\n
Als beheerder/admin heeft u extra functies in het menu:
\n
\n1.	Terugnemen
\n•	Overzicht van producten die uitgeleend zijn. Ook staat er aan wie het is uitgeleend. Daarnaast staat de inleverdatum weergegeven.
\n
\n2.	Statistieken
\n•	Overzicht van beschikbare- en uitgeleende producten en beschadigde- en onbeschadigde producten.
\n
\n
\n<b>Product terugnemen</b>
\nTik op "Terugnemen" die in het menu staat. Zoek vervolgens het teruggebrachte product op en tik op "Terugnemen". Als het product beschadigd is, tik daarna op "Beschadigd". Zo niet, tik dan weer op "Terugnemen".
    </string>
    <string name="handleidingAdmin"><b><font size="22">Admin</font></b>\n
\nAls admin kunt u beheerder aanwijzen en producten toevoegen/verwijderen.
\n
\n<b>Beheerder toevoegen/verwijderen</b>
\nToevoegen: tik op "Beheerder" die in het menu staat. Tik vervolgens op + icoon. Vul het emailadres van de beheerder in en tik vervolgens op "Toevoegen".
\n
\nVerwijderen: tik op "Beheerder" die in het menu staat. Zoek de beheerder op die u wilt verwijderen. Tik vervolgens op "Verwijderen" om de beheerder te verwijderen.
\n
\n
\n<b>Product toevoegen/verwijderen</b>
\nToevoegen: ga naar de hoofdpagina van de app. Tik daarna op + icoon. Vul de gegevens in en tik vervolgens op "Toevoegen".
\n
\nVerwijderen: ga naar de hoofdpagina van de app. Tik op het product dat u wilt verwijderen. Rechtsonder is er een prullenbak-icoon te zien. Tik op dat icoon om het product te verwijderen.
    </string>
    <string name="lichte_thema">Lichte thema</string>
</resources>
