<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/meldingen"
            android:title="@string/meldingen" />
        <item
            android:id="@+id/geschiedenis"
            android:title="@string/geschiedenis" />
        <item
            android:id="@+id/terugnemen"
            android:title="@string/terugnemen" />
        <item
            android:id="@+id/beheerders"
            android:title="@string/beheerders" />
        <item
            android:id="@+id/producten"
            android:title="@string/Producten" />
        <item
            android:id="@+id/statistieken"
            android:title="@string/statistieken" />
        <item
            android:id="@+id/instellingen"
            android:title="@string/instellingen" />
        <item
            android:id="@+id/contact"
            android:title="@string/contact" />
        <item
            android:id="@+id/uitloggen"
            android:title="@string/uitloggen" />
    </group>
</menu>
