<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nl.group3.techlab.language">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kies_een_taal"
        android:textSize="24sp"
        android:textAlignment="center"
        android:paddingTop="30dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="end">

        <RadioButton
            android:id="@+id/rbc1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:checked="false"
            android:text="@string/nederlands"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rbc2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:checked="false"
            android:text="@string/english"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="30dp"
            android:layout_height="44dp"
            android:background="@color/colorPrimary"
            android:text="@string/opslaan"
            android:textColor="@color/white" />
    </RadioGroup>



</LinearLayout>
