<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HandInConfirmation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="24dp"
            tools:text="Item" />

        <TextView
            android:id="@+id/borrowedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            tools:text="Borrowed by"
            android:text="@string/geleend_door_s"
            android:textColor="#FFFFFF"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:text="@string/weet_je_zeker_terug"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom">

            <Button
                android:id="@+id/returnAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:text="@string/terugnemen"/>

            <Button
                android:id="@+id/brokenAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:text="@string/beschadigd"/>

            <Button
                android:id="@+id/cancelAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:text="@string/annuleren"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>