<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.group3.techlab.Notifications">
    <Button
        android:id="@+id/notify"
        android:layout_width="213dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:text="@string/verstuur_melding"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@android:color/white"
        android:hint="@string/beschrijving"

        android:textColorHint="@android:color/white"
        android:layout_above="@id/notify"
        android:layout_marginBottom="50dp"
        android:layout_centerInParent="true"
        android:inputType="text" />
    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextDescription"
        android:layout_centerInParent="true"
        android:hint="@string/titel"
android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="text" />

</RelativeLayout>
