<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="horizontal"
    tools:context=".History"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_background"
        android:padding="6dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:text="@string/naam"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:paddingBottom="0dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/returned"
            android:text="@string/teruggebracht"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="6dp"
            android:paddingBottom="0dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/description"
            android:text="@string/beschrijving"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="6dp"
            android:paddingBottom="0dp"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>