<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/objectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textFontWeight="bold"
            android:maxLines="2"
            android:text="Text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inleverdatum"></TextView>

        <TextView
            android:id="@+id/returnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geleend_door"></TextView>

        <TextView
            android:id="@+id/borrowedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text" />

    </LinearLayout>

    <Button
    android:id="@+id/returnButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/terugnemen"
    android:layout_gravity="center_vertical|center_horizontal"
    android:backgroundTint="@color/colorPrimary"
    android:textColor="#FFFFFF"/>
</LinearLayout>